crates/plotnik-lib/tests/04-emit/quantifiers/one_or_more_impossible_body.txt
Q = (function_declaration (program))+ @fns
==== diagnostics ====
error: `program` cannot be a child of this node
 --> query.ptk:1:28
  |
1 | Q = (function_declaration (program))+ @fns
  |      --------------------  ^^^^^^^
  |      |
  |      on `function_declaration`
  |
help: `function_declaration` has no unlabeled children — its children are fields: `body: (statement_block)`, `name: (identifier)`, `parameters: (formal_parameters)`
